--- a/Skin/default/screens/webradio_Favorites.xaml
+++ b/Skin/default/screens/webradio_Favorites.xaml
@@ -2,53 +2,33 @@
 <Include
     xmlns="www.team-mediaportal.com/2008/mpf/directx"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    Source="screens\master_menu.xaml"
-    >
-	<Include.Resources>
+		xmlns:wrh="clr-namespace:Webradio.Models;assembly=Webradio"
+    Source="screens\master_menu.xaml">
+  <Include.Resources>
 
     <!-- Header -->
     <ResourceWrapper x:Key="Header_Text" Resource="[Webradio.Favorites.ScreenTitle]"/>
 
+		<Model x:Key="WebradioModel" Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>
+	
     <!-- Contents -->
     <ControlTemplate x:Key="Contents_Template">
-		<DockPanel Context="{Model Id=EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94}" LastChildFill="False">
+      <DockPanel DataContext="{Binding Source={StaticResource WebradioModel}}">
+        <Label Content="[HelloWorld.SampleText]" Color="{ThemeResource TextColor}" FontSize="36" DockPanel.Dock="Top" HorizontalAlignment="Center"/>
+			
+		  <ToggleButton Width="50" Height="20" Content="Hallo" />
+			
+        <ListView Width="492" Height="132" VerticalAlignment="Top" Name="lstOverview" ItemsSource="{Binding Path=List}">
 
-			<StackPanel Orientation="Vertical" Margin="0,0,5,0">				
-				<Button Content="[Webradio.Favorites.Add]" Style="{ThemeResource ButtonWideStyle}"
-					HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-					Command="{Command Add}"/>			  
-				<Button Content="[Webradio.Favorites.Delete]" Style="{ThemeResource ButtonWideStyle}"
-					HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-					Command="{Command Delete}"/>			  
-				<Button Content="[Webradio.Favorites.Rename]" Style="{ThemeResource ButtonWideStyle}"
-					HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-					Command="{Command Rename}"/>			  
-				<Button Content="[Webradio.Favorites.Save]" Style="{ThemeResource ButtonWideStyle}"
-					HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-					Command="{Command Save}"/>
-					
-				<TextBox Margin="10,5,10,5" HorizontalAlignment="Stretch" BorderThickness="1" 
-					Text="{Binding Path=SearchCity,Mode=TwoWay}"/>
-			</StackPanel>
+        </ListView>
 		
-			<StackPanel Orientation="Vertical" Margin="5,0,0,0">
-				<TreeView Style="{ThemeResource SingleMarkableTreeViewStyle}"
-					Margin="50" RadioButton.GroupContext="RadioButtonGroup"
-					VerticalAlignment="Stretch" HorizontalAlignment="Stretch"
-					ItemsSource="{Binding Path=Tree,Mode=OneTime}">
-						<TreeView.Resources>
-						<!-- Expander_Binding isn't necessary here - the TreeView won't synchronize its opening-state to the underlaying data model; it is static. We use a dummy. -->
-						<BindingWrapper x:Key="Expander_Binding"/>
+        <StackPanel DockPanel.Dock="Center" Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
+          <Button Content="[HelloWorld.ButtonText]" Style="{ThemeResource ButtonWideStyle}" Margin="10"
+              HorizontalAlignment="Right" VerticalAlignment="Center"
+              Command="{Command ChangeHelloWorldString}"/>
+          <Label Content="{Binding HelloString}" Color="{ThemeResource TextColor}" Margin="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        </StackPanel>
 
-						<!-- Command not necessary here. We use a dummy. -->
-						<ResourceWrapper x:Key="Expander_Command"/>
-
-						<!-- Checker_Command isn't necessary here - the selection state will be propagated via the Selected property.
-						We use a dummy. -->
-						<ResourceWrapper x:Key="Checker_Command"/>
-						</TreeView.Resources>
-				</TreeView>
-			</StackPanel>
       </DockPanel>
     </ControlTemplate>
   </Include.Resources>
