--- a/Skin/default/screens/webradio_Filter.xaml
+++ b/Skin/default/screens/webradio_Filter.xaml
@@ -21,17 +21,19 @@
 						<ColumnDefinition Width="20*" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
-						<RowDefinition Height="7*" />
-						<RowDefinition Height="7*" />
-						<RowDefinition Height="86*" />
+						<RowDefinition Height="6*" />
+						<RowDefinition Height="6*" />
+						<RowDefinition Height="81*" />
+						<RowDefinition Height="3*" />
+						<RowDefinition Height="3*" />
 					</Grid.RowDefinitions>
 				
 					<!-- Actual Filter -->
-					<TextBox  Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,0" Text="{Binding Path=FilterTitel, Mode=TwoWay}" VerticalAlignment="Center" />
+					<TextBox Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,0" Text="{Binding Path=FilterTitel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />
 
 					<!-- Countrys -->
-					<Label Grid.Column="0" Grid.Row="1" Content="Country" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" />
+					<Label Grid.Column="0" Grid.Row="1" Content="[Webradio.Filter.Country]" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
 					<ListView x:Name="lvCountrys" Grid.Column="0" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -46,10 +48,12 @@
 								</CommandList>
 							</ListView.Resources>
 					</ListView>	
-					
+					<Label Grid.Column="0" Grid.Row="3" Content="{Binding Path=CountryState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						
 					<!-- Citys -->
-					<Label Grid.Column="1" Grid.Row="1" Content="City" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" />
+					<Label Grid.Column="1" Grid.Row="1" Content="[Webradio.Filter.City]" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
 					<ListView x:Name="lvCitys" Grid.Column="1" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -64,10 +68,12 @@
 							</CommandList>
 						</ListView.Resources>
 					</ListView>		
+					<Label Grid.Column="1" Grid.Row="3" Content="{Binding Path=CityState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
 						
 					<!-- Genres -->	
-					<Label Grid.Column="2" Grid.Row="1" Content="Genre" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" />
+					<Label Grid.Column="2" Grid.Row="1" Content="[Webradio.Filter.Genres]" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
 					<ListView x:Name="lvGenres" Grid.Column="2" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -82,10 +88,12 @@
 							</CommandList>
 						</ListView.Resources>
 					</ListView>	
-					
+					<Label Grid.Column="2" Grid.Row="3" Content="{Binding Path=GenreState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						
 					<!-- Bitrate -->
-					<Label Grid.Column="3" Grid.Row="1" Content="Bitrate" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" />
+					<Label Grid.Column="3" Grid.Row="1" Content="[Webradio.Filter.Bitrate]" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
 					<ListView x:Name="lvBitrate" Grid.Column="3" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -100,6 +108,11 @@
 							</CommandList>
 						</ListView.Resources>
 					</ListView>	
+					<Label Grid.Column="3" Grid.Row="3" Content="{Binding Path=BitrateState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+					
+					<Label Grid.ColumnSpan="4" Grid.Row="4" Content="{Binding Path=SelectedStreamsCount, Mode=TwoWay}" Margin="0,0,5,0" HorizontalContentAlignment="Center" 
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
 					
 				</Grid> 
 			</DockPanel>
