--- a/Skin/default/screens/webradio_Home.xaml
+++ b/Skin/default/screens/webradio_Home.xaml
@@ -28,44 +28,48 @@
         
         <StackPanel Grid.Row="0" Grid.ColumnSpan="2" Margin="10,10,10,10">
           <Label DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-						Content="{Binding [Name]}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" VerticalAlignment="Center"/>
+						Content="{Binding [Name]}" HorizontalAlignment="Stretch" HorizontalContentAlignment="Center" 
+            VerticalAlignment="Center" Color="{ThemeResource TextColor}"/>
         </StackPanel>
 
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Genres]" 
-						FontSize="{ThemeResource SmallFontSize}" Color="White"/>
+						FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-						Content="{Binding [Genres]}" FontSize="{ThemeResource SmallerFontSize}" Color="White"/>
+						Content="{Binding [Genres]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Bitrate]" 
-						FontSize="{ThemeResource SmallFontSize}" Color="White"/>
+						FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-						Content="{Binding [Bitrate]}" FontSize="{ThemeResource SmallerFontSize}" Color="White"/>
+						Content="{Binding [Bitrate]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Country]" 
-						FontSize="{ThemeResource SmallFontSize}" Color="White"/>
+						FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-						Content="{Binding [Country]}" FontSize="{ThemeResource SmallerFontSize}" Color="White"/>
+						Content="{Binding [Country]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]" 
-						FontSize="{ThemeResource SmallFontSize}" Color="White"/>
+						FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
 					<Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-						Content="{Binding [City]}" FontSize="{ThemeResource SmallerFontSize}" Color="White"/>
+						Content="{Binding [City]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
         </StackPanel>
 		
-        <Image Grid.Column="1" Grid.Row="1" Margin="10" Stretch="Uniform" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" Source="{Binding [Logo]}" VerticalAlignment="Top"/>
+        <Image Grid.Column="1" Grid.Row="1" Margin="10" Stretch="Uniform" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+               Source="{Binding [Logo]}" VerticalAlignment="Top"/>
 		
-				<Label Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" Content="{Binding [Description]}" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+				<Label Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
+               Content="{Binding [Description]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
 
-            <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="3" Margin="10" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Style="{ThemeResource ContentsMenuListViewStyle}"
-								ItemsSource="{Binding Path=AllRadioStreams}" >	
-							<ListView.Resources> 
-								<CommandList x:Key="Menu_Command">
-									<Command Source="{StaticResource WebradioModel}" Path="SelectStream">
-										<Command.Parameters> 
-											<LateBoundValue BindingValue="{Binding}"/> 
-										</Command.Parameters>
-									</Command>
-								</CommandList>
-							</ListView.Resources>
-						</ListView>
+        <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="3" Margin="10" HorizontalAlignment="Stretch" 
+            VerticalAlignment="Stretch" Style="{ThemeResource ContentsMenuListViewStyle}"
+						ItemsSource="{Binding Path=AllRadioStreams}" >	
+					<ListView.Resources> 
+						<CommandList x:Key="Menu_Command">
+							<Command Source="{StaticResource WebradioModel}" Path="SelectStream">
+								<Command.Parameters> 
+									<LateBoundValue BindingValue="{Binding}"/> 
+								</Command.Parameters>
+							</Command>
+						</CommandList>
+					</ListView.Resources>
+				</ListView>
 
 				</Grid>
       </DockPanel>
