--- a/Skin/default/screens/webradio_Favorites.xaml
+++ b/Skin/default/screens/webradio_Favorites.xaml
@@ -9,13 +9,45 @@
     <!-- Header -->
     <ResourceWrapper x:Key="Header_Text" Resource="[Webradio.Favorites.ScreenTitle]"/>
 
-		<Model x:Key="WebradioModel" Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>
-	
+    <Model x:Key="WebradioModel" Id="EC2F9DD4-C694-4C2D-9EFB-092AA1F4BD94"/>
+
     <!-- Contents -->
     <ControlTemplate x:Key="Contents_Template">
       <DockPanel DataContext="{Binding Source={StaticResource WebradioModel}}">
+          <Grid>
+            <Grid.ColumnDefinitions>
+              <ColumnDefinition Width="40*" />
+              <ColumnDefinition Width="20*" />
+              <ColumnDefinition Width="20*" />
+              <ColumnDefinition Width="20*" />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+              <RowDefinition Height="10*" />
+              <RowDefinition Height="90*" />
+            </Grid.RowDefinitions>
 
+          <TextBox Grid.ColumnSpan="2" Grid.Row="0" Margin="10,0,10,0" Text="{Binding Path=Titel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+          <Button Grid.Column="2" Grid.Row="0" Margin="10,0,10,0" Content="[Webradio.Favorites.Rename]" Command="{Command Rename}"/>           
+          <Image Grid.Column="3" Grid.Row="0" Stretch="Uniform" Source="{Binding Path=SaveImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right"/>
 
+          <ListView x:Name="lv" Grid.ColumnSpan="4" Grid.Row="1" Margin="10"
+            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+            Style="{ThemeResource ContentsMenuListViewStyle}"
+            ItemsSource="{Binding Path=FavoritItems, Mode=TwoWay}" >
+            <ListView.Resources>
+              <CommandList x:Key="Menu_Command">
+                <Command Source="{StaticResource WebradioModel}" Path="Selected">
+                  <Command.Parameters>
+                    <LateBoundValue BindingValue="{Binding}"/>
+                  </Command.Parameters>
+                </Command>
+              </CommandList>
+            </ListView.Resources>
+          </ListView>
+          
+          
+          
+        </Grid>
       </DockPanel>
     </ControlTemplate>
   </Include.Resources>
