--- a/Skin/default/screens/webradio_Filter.xaml
+++ b/Skin/default/screens/webradio_Filter.xaml
@@ -21,19 +21,20 @@
 						<ColumnDefinition Width="20*" />
 					</Grid.ColumnDefinitions>
 					<Grid.RowDefinitions>
+						<RowDefinition Height="10*" />
+						<RowDefinition Height="6*" />
+						<RowDefinition Height="72*" />
 						<RowDefinition Height="6*" />
 						<RowDefinition Height="6*" />
-						<RowDefinition Height="81*" />
-						<RowDefinition Height="3*" />
-						<RowDefinition Height="3*" />
 					</Grid.RowDefinitions>
 				
 					<!-- Actual Filter -->
-					<TextBox Grid.ColumnSpan="4" Grid.Row="0" Margin="5,5,5,0" Text="{Binding Path=FilterTitel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />
-
+					<TextBox Grid.ColumnSpan="3" Grid.Row="0" Margin="10,0,10,0" Text="{Binding Path=FilterTitel, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" />
+          <Image Grid.Column="3" Grid.Row="0" Stretch="Uniform" Source="{Binding Path=SaveImage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Right"/>
+          
 					<!-- Countrys -->
 					<Label Grid.Column="0" Grid.Row="1" Content="[Webradio.Filter.Country]" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					<ListView x:Name="lvCountrys" Grid.Column="0" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -49,11 +50,11 @@
 							</ListView.Resources>
 					</ListView>	
 					<Label Grid.Column="0" Grid.Row="3" Content="{Binding Path=CountryState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 						
 					<!-- Citys -->
 					<Label Grid.Column="1" Grid.Row="1" Content="[Webradio.Filter.City]" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					<ListView x:Name="lvCitys" Grid.Column="1" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -69,11 +70,11 @@
 						</ListView.Resources>
 					</ListView>		
 					<Label Grid.Column="1" Grid.Row="3" Content="{Binding Path=CityState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 						
 					<!-- Genres -->	
 					<Label Grid.Column="2" Grid.Row="1" Content="[Webradio.Filter.Genres]" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					<ListView x:Name="lvGenres" Grid.Column="2" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -89,11 +90,11 @@
 						</ListView.Resources>
 					</ListView>	
 					<Label Grid.Column="2" Grid.Row="3" Content="{Binding Path=GenreState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 						
 					<!-- Bitrate -->
 					<Label Grid.Column="3" Grid.Row="1" Content="[Webradio.Filter.Bitrate]" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="White" />
+						HorizontalAlignment="Stretch" Margin="5,0,5,0" VerticalAlignment="Center" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					<ListView x:Name="lvBitrate" Grid.Column="3" Grid.Row="2" Margin="10" 
 						HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
 						Style="{ThemeResource WebradioFilterListViewStyle}"
@@ -109,10 +110,10 @@
 						</ListView.Resources>
 					</ListView>	
 					<Label Grid.Column="3" Grid.Row="3" Content="{Binding Path=BitrateState, Mode=TwoWay}" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					
 					<Label Grid.ColumnSpan="4" Grid.Row="4" Content="{Binding Path=SelectedStreamsCount, Mode=TwoWay}" Margin="0,0,5,0" HorizontalContentAlignment="Center" 
-						HorizontalAlignment="Stretch" VerticalAlignment="Top" FontSize="{ThemeResource SmallerFontSize}" Color="White" />
+						HorizontalAlignment="Stretch" VerticalAlignment="Top" Color="{ThemeResource TextColor}" FontSize="{ThemeResource SmallerFontSize}"/>
 					
 				</Grid> 
 			</DockPanel>
