--- a/Skin/Reflexion/screens/webradio_FullScreenContent.xaml
+++ b/Skin/Reflexion/screens/webradio_FullScreenContent.xaml
@@ -74,7 +74,7 @@
                 <ResourceWrapper x:Key="ControlWidth" Resource="250"/>
                 <ResourceWrapper x:Key="ControlHeight" Resource="250"/>
                 <ControlTemplate x:Key="MakeReflexion">
-                   <Image x:Name="ItemTypeImage" Stretch="Uniform" Source="{Binding MediaItem}" FallbackSource="AudioLarge.png" Width="250" Height="250"/>
+                   <Image x:Name="ItemTypeImage" Stretch="Uniform" Source="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" FallbackSource="AudioLarge.png" Width="250" Height="250"/>
                 </ControlTemplate>
               </Control.Resources>
             </Control>          
