--- a/Skin/default/screens/webradio_CurrentlyPlaying.xaml
+++ b/Skin/default/screens/webradio_CurrentlyPlaying.xaml
@@ -41,7 +41,7 @@
                 Content="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.Album}" Color="{ThemeResource TextColor}"/>
 
             <Image x:Name="ItemTypeImage" Grid.Row="0" Grid.Column="2" Grid.RowSpan="4" Stretch="Uniform" 
-                Source="{Binding MediaItem}" FallbackSource="AudioLarge.png"
+                Source="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" FallbackSource="AudioLarge.png"
                 Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}"/>
           </Grid>
         </mp_special_controls:PlayerControl.TemplateControl>
