--- a/Skin/default/screens/webradio_dialogShowFilter.xaml
+++ b/Skin/default/screens/webradio_dialogShowFilter.xaml
@@ -27,7 +27,7 @@
           </Grid.RowDefinitions>
           <ListView x:Name="lv" Grid.ColumnSpan="2" Margin="10,5,10,5" HorizontalAlignment="Stretch" 
               VerticalAlignment="Stretch" Style="{ThemeResource ContentsMenuListViewStyle}"
-              ItemsSource="{Binding Path=Items}" >
+              ItemsSource="{Binding Path=FilterItems}" >
             <ListView.Resources>
               <CommandList x:Key="Menu_Command">
                 <Command Source="{StaticResource Model}" Path="Selected">
