--- a/Skin/Titanium/screens/webradio_FullScreenContent.xaml
+++ b/Skin/Titanium/screens/webradio_FullScreenContent.xaml
@@ -73,7 +73,14 @@
                 <ResourceWrapper x:Key="ControlWidth" Resource="250"/>
                 <ResourceWrapper x:Key="ControlHeight" Resource="250"/>
                 <ControlTemplate x:Key="MakeReflexion">
-                   <Image x:Name="ItemTypeImage" Stretch="Uniform" Source="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" FallbackSource="AudioLarge.png" Width="250" Height="250"/>
+                  <!--Logo-->
+                  <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="4">
+                    <Rectangle Width="250" Height="250" RadiusX="20" RadiusY="20">
+                      <Rectangle.Fill>
+                        <ImageBrush DataContext="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" ImageSource="{Binding}"/>
+                      </Rectangle.Fill>
+                    </Rectangle>
+                  </StackPanel>
                 </ControlTemplate>
               </Control.Resources>
             </Control>
