--- a/Skin/default/screens/webradio_Home.xaml
+++ b/Skin/default/screens/webradio_Home.xaml
@@ -9,15 +9,16 @@
     <ResourceWrapper x:Key="Header_Text" Resource="[Webradio.Home.ScreenTitle]"/>
 
     <Model x:Key="WebradioModel" Id="EA3CC191-0BE5-4C8D-889F-E9C4616AB554"/>
-
+    
     <!-- Contents -->
     <ControlTemplate x:Key="Contents_Template">
       <DockPanel DataContext="{Binding Source={StaticResource WebradioModel}}">
         <Grid>
           <Grid.RowDefinitions>
             <RowDefinition Height="10*" />
-            <RowDefinition Height="60*" />
+            <RowDefinition Height="50*" />
             <RowDefinition Height="30*" />
+            <RowDefinition Height="10*" />
           </Grid.RowDefinitions>
           <Grid.ColumnDefinitions>
             <ColumnDefinition Width="25*"  />
@@ -31,39 +32,49 @@
               VerticalAlignment="Center" Color="{ThemeResource TextColor}"/>
           </StackPanel>
 
-          <StackPanel Orientation="Vertical" VerticalAlignment="Center" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">          
+          <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="1" Margin="5,5,5,5">          
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Genres]" 
-              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
+              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
               Content="{Binding [Genres]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Bitrate]" 
-              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
+              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
               Content="{Binding [Bitrate]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.Country]" 
-              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
+              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
               Content="{Binding [Country]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" Content="[Webradio.Home.City]" 
-              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource TextColor}"/>
+              FontSize="{ThemeResource SmallFontSize}" Color="{ThemeResource EmphasisTextColor}"/>
             
             <Label VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
               Content="{Binding [City]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
           </StackPanel>
 
-          <Image Grid.Column="1" Grid.Row="1" Margin="10" Stretch="Uniform" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-            Source="{Binding [Logo]}" VerticalAlignment="Top"/>
+          <!--Logo-->
+          <StackPanel Grid.Column="1" Grid.Row="1">
+            <Rectangle Margin="10" Height="200" Width="200" RadiusX="20" RadiusY="20">
+              <Rectangle.Fill>
+                <ImageBrush DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" ImageSource="{Binding [Logo]}"/>
+              </Rectangle.Fill>
+            </Rectangle>
+          </StackPanel>
+            
+          <Label Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
+            Content="{Binding [Description]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"
+            Wrap="True" Scroll="Auto" ScrollSpeed="5" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
 
-          <Label Grid.ColumnSpan="2" Grid.Row="2" Margin="5,5,5,5" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}" 
-            Content="{Binding [Description]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}" Scroll="Auto" ScrollSpeed="20" ScrollDelay="3" />
+          <Label Grid.Column="0" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Left" DataContext="{Binding ElementName=lvStreams,Path=CurrentItem}"
+            Content="{Binding [Indx]}" FontSize="{ThemeResource SmallerFontSize}" Color="{ThemeResource TextColor}"/>
 
-          <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="3" Margin="10" HorizontalAlignment="Stretch" 
+          <ListView x:Name="lvStreams" Grid.Column="2" Grid.RowSpan="4" Margin="10" HorizontalAlignment="Stretch" 
             VerticalAlignment="Stretch" Style="{ThemeResource ContentsMenuListViewStyle}"
             ItemsSource="{Binding Path=AllRadioStreams}" >
             <ListView.Resources>
