--- a/Skin/Titanium/screens/webradio_FullScreenContent.xaml
+++ b/Skin/Titanium/screens/webradio_FullScreenContent.xaml
@@ -74,12 +74,24 @@
                 <ResourceWrapper x:Key="ControlHeight" Resource="250"/>
                 <ControlTemplate x:Key="MakeReflexion">
                   <!--Logo-->
-                  <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="4">
-                    <Rectangle Width="250" Height="250" RadiusX="20" RadiusY="20">
-                      <Rectangle.Fill>
-                        <ImageBrush DataContext="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" ImageSource="{Binding}"/>
-                      </Rectangle.Fill>
-                    </Rectangle>
+                  <StackPanel>
+                    <Canvas Width="250" Height="250" Background="#00000000">
+                      <Rectangle Width="250" Height="250" RadiusY="20" RadiusX="20" Stroke="Black">
+                        <Rectangle.Fill>
+                          <ImageBrush DataContext="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" ImageSource="{Binding}"/>
+                        </Rectangle.Fill>
+                      </Rectangle>
+                      <Rectangle Width="250" Height="250" RadiusY="20" RadiusX="20" Stroke="Black" Opacity="0.5">
+                        <Rectangle.Fill>
+                          <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                            <GradientStop Color="Black" Offset="0"/>
+                            <GradientStop Offset="0.073"/>
+                            <GradientStop Color="Transparent" Offset="1"/>
+                            <GradientStop Color="Transparent" Offset="0.103"/>
+                          </LinearGradientBrush>
+                        </Rectangle.Fill>
+                      </Rectangle>
+                    </Canvas>
                   </StackPanel>
                 </ControlTemplate>
               </Control.Resources>
