--- a/Skin/default/screens/webradio_CurrentlyPlaying.xaml
+++ b/Skin/default/screens/webradio_CurrentlyPlaying.xaml
@@ -42,11 +42,23 @@
 
             <!--Logo-->
             <StackPanel Grid.Row="0" Grid.Column="2" Grid.RowSpan="4">
-              <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusX="20" RadiusY="20">
-                <Rectangle.Fill>
-                  <ImageBrush DataContext="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" ImageSource="{Binding}"/>
-                </Rectangle.Fill>
-              </Rectangle>
+              <Canvas Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" Background="#00000000">
+                <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black">
+                  <Rectangle.Fill>
+                    <ImageBrush DataContext="{Binding Source={StaticResource Model}, Path=PlayerUIContributor.CurrentStreamLogo}" ImageSource="{Binding}"/>
+                  </Rectangle.Fill>
+                </Rectangle>
+                <Rectangle Width="{StaticResource MEDIA_THUMB_WIDTH_CP}" Height="{StaticResource MEDIA_THUMB_HEIGHT_CP}" RadiusY="20" RadiusX="20" Stroke="Black" Opacity="0.5">
+                  <Rectangle.Fill>
+                    <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                      <GradientStop Color="Black" Offset="0"/>
+                      <GradientStop Offset="0.073"/>
+                      <GradientStop Color="Transparent" Offset="1"/>
+                      <GradientStop Color="Transparent" Offset="0.103"/>
+                    </LinearGradientBrush>
+                  </Rectangle.Fill>
+                </Rectangle>
+              </Canvas>
             </StackPanel>
 
           </Grid>
