--- a/Skin/default/screens/webradio_Settings.xaml
+++ b/Skin/default/screens/webradio_Settings.xaml
@@ -11,6 +11,9 @@
     <ControlTemplate x:Key="Contents_Template">
       <DockPanel Context="{Model Id=6378BD83-BF06-4AC3-ADD7-9A4B72DA878E}" LastChildFill="False">
 
+        <Button Content="Teste Streamlist" Command="{Command StartTest}"/>
+        <Button Content="Clear Streamlist" Command="{Command ClearStreamList}"/>
+        
       </DockPanel>
     </ControlTemplate>
   </Include.Resources>
